# app/Http/Controllers/Api/SearchController.php
@@ -7,8 +7,10 @@ use App\Models\Serie;
 use App\Models\Author;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
-use App\Http\Resources\BookResource;
+use App\Http\Resources\Book\BookLightResource;
+use App\Http\Resources\Serie\SerieLightResource;
 use App\Http\Resources\Search\SearchBookResource;
+use App\Http\Resources\Author\AuthorLightResource;
 use App\Http\Resources\Search\SearchSerieResource;
 use App\Http\Resources\Search\SearchAuthorResource;
 
@@ -19,13 +21,13 @@ class SearchController extends Controller
      *     path="/search",
      *     tags={"search"},
      *     summary="List of search results",
-     *     description="Search",
+     *     description="To search books, authors and series",
      *     @OA\Parameter(
      *         name="q",
      *         in="query",
-     *         description="String to search books",
+     *         description="String value can be book's title, author's firstname or lastname, series' title",
      *         required=true,
-     *         example="refuges",
+     *         example="bottero",
      *         @OA\Schema(
      *           type="string",
      *         ),
@@ -43,7 +45,7 @@ class SearchController extends Controller
         $searchTerm = mb_convert_encoding($searchTermRaw, 'UTF-8', 'UTF-8');
         if ($searchTermRaw) {
             $authors = Author::whereLike(['name', 'firstname', 'lastname'], $searchTerm)->get();
-            $series = Serie::whereLike(['title'], $searchTerm)->get();
+            $series = Serie::whereLike(['title', 'authors.name'], $searchTerm)->get();
             $books = Book::whereLike(['title', 'authors.name', 'serie.title'], $searchTerm)->orderBy('serie_id')->orderBy('serie_number')->get();
 
             $authors = SearchAuthorResource::collection($authors);
@@ -66,7 +68,7 @@ class SearchController extends Controller
         $searchTerm = $request->input('search-term');
         $books = Book::whereLike(['title'], $searchTerm)->orderBy('serie_id')->orderBy('serie_number')->get();
 
-        return BookResource::collection($books);
+        return BookLightResource::collection($books);
     }
 
     public function byAuthor(Request $request)
@@ -74,7 +76,7 @@ class SearchController extends Controller
         $searchTerm = $request->input('search-term');
         $books = Book::whereLike(['author.name', 'author.firstname', 'author.lastname'], $searchTerm)->orderBy('serie_id')->orderBy('serie_number')->get();
 
-        return BookResource::collection($books);
+        return AuthorLightResource::collection($books);
     }
 
     public function bySerie(Request $request)
@@ -82,6 +84,6 @@ class SearchController extends Controller
         $searchTerm = $request->input('search-term');
         $books = Book::whereLike(['serie.title'], $searchTerm)->orderBy('serie_id')->orderBy('serie_number')->get();
 
-        return BookResource::collection($books);
+        return SerieLightResource::collection($books);
     }
 }
